--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 
 body {
+
+  box-sizing: border-box;
+ 
+  padding: 0;
+  font-family: "Outfit", Arial, Helvetica, sans-serif;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,4 +17,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html {
+  scroll-behavior: smooth;
 }
